--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,46 @@
-<!DOCTYPE html>
+<!DOCTYPE
+          html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>gan-js</title>
-  </head>
-  <body>
+    <title>
+        gan-js
+    </title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.6.4/fabric.min.js">
+    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
+    </script>
+
+</head>
+
+<body>
     <noscript>
-      <strong>We're sorry but gan-js doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+        <strong>We're
+            sorry
+            but
+            gan-js
+            doesn't
+            work
+            properly
+            without
+            JavaScript
+            enabled.
+            Please
+            enable
+            it
+            to
+            continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+    </div>
     <!-- built files will be auto injected -->
-  </body>
+
+</body>
+
 </html>
